Adcionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Olá mundo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates et perferendis voluptate quaerat sed quibusdam id quae, nam possimus mollitia necessitatibus ipsa natus. Quis, suscipit voluptas placeat error ipsa totam.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro accusantium perspiciatis animi praesentium deserunt cumque quos tempora! Rerum voluptatem cumque, dignissimos mollitia tempore ipsum eligendi voluptates quasi ipsam magnam deserunt!</p>
 </body>
 </html>
